test/out/_builds_ping-cloud-private-tenant_ping-cloud-base_k8s-configs_ping-cloud_base_pingfederate_ff-external-ingress_kustomization.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: pingfederate-admin-ext-ingress
  namespace: ping-cloud
spec:
  ingressClassName: nginx-public
  rules:
  - host: ext-pingfederate-admin-api.ping-demo.com
    http:
      paths:
      - backend:
          service:
            name: pingfederate-admin
            port:
              number: 9999
        path: /pf-admin-api/
        pathType: Prefix
  tls:
  - hosts:
    - ext-pingfederate-admin-api.ping-demo.com
